# Feudalciv

./: .gitignore  configure.ac  fc_version
ai/default/: advdiplomacy.c
client/: citydlg_common.c  cityrepdata.c  climisc.c  climisc.h  mapview_common.c  packhand.c  plrdlg_common.c  repodlgs_common.c  repodlgs_common.h
client/gui-gtk-2.0/: dialogs.c  diplodlg.c  plrdlg.c  repodlgs.c
client/gui-gtk-3.0/: dialogs.c  diplodlg.c  plrdlg.c  repodlgs.c
client/include/: dialogs_g.h
client/luascript/: script_client.c
common/: Makefile.am  borders.c  city.c  city.h  diptreaty.c  diptreaty.h  effects.c  effects.h  events.c  events.h  fc_types.h  improvement.c  improvement.h  packets.def  player.c  player.h  tech.c  traderoutes.c  war.c  war.h
common/scriptcore/: luascript.c  luascript.h  luascript_func.c  luascript_signal.c  luascript_signal.h
data/: Makefile.am  civclient.dsc  civserver.dsc  civserver.room  feudalciv.serv  feudalciv.tilespec  trident.tilespec
data/default/: Makefile.am  default.lua  triggers.ruleset
data/experimental/: nations.ruleset
data/feudalciv/: Makefile.am  buildings.ruleset  cities.ruleset  effects.ruleset  game.ruleset  governments.ruleset  nationlist.ruleset  nations.ruleset  roads.spec  script.lua  techs.ruleset  terrain.ruleset  units.ruleset
data/feudalciv/nation/: Makefile.am  Makefile.am.sh  barbarian.ruleset  berkshire.ruleset  brycheiniog.ruleset  brycheinion.ruleset  buelt.ruleset  cornish.ruleset  cornwall.ruleset  cumbria.ruleset  danelaw.ruleset  danishanglia.ruleset  danishmercia.ruleset  devon.ruleset  dorset.ruleset  dyfed.ruleset  english.ruleset  essex.ruleset  glywysing.ruleset  gwent.ruleset  gwynedd.ruleset  hampshire.ruleset  hwicce.ruleset  jorvik.ruleset  kent.ruleset  magonsaete.ruleset  mercia.ruleset  middleanglia.ruleset  mkruleset.sh  norfolk.ruleset  northmercia.ruleset  northumbria.ruleset  northumbrian.ruleset  pirate.ruleset  powys.ruleset  saxon.ruleset  seisyllwg.ruleset  somerset.ruleset  southmercia.ruleset  suffolk.ruleset  (+8 more)
data/flags/: Makefile.am  Makefile.am.sh  convert_png
data/misc/: flags-large.spec  flags.spec  shields-large.spec  shields.spec
data/scenarios/: Makefile.am  feudalciv-british-isles-350x350.sav
data/trident/: roads.spec
scripts/: travis-build.sh
server/: Makefile.am  citytools.c  cityturn.c  connecthand.c  diplhand.c  diplhand.h  handchat.c  plrhand.c  plrhand.h  ruleset.c  savegame2.c  srv_main.c  triggerhand.c  triggerhand.h  triggers.c  triggers.h  war.c  war.h  warhand.c  warhand.h
server/scripting/: api_server_edit.c  api_server_edit.h  api_server_notify.c  api_server_notify.h  script_server.c  script_server.h  tolua_server.pkg
translations/freeciv/: en_GB.po
