## Process this file with automake to produce Makefile.in
# Note: After adding a new nation file, 'make Makefile.am'

## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/@PACKAGE@/feudalciv/nation

pkgdata_DATA = \
		barbarian.ruleset \
		berkshire.ruleset \
		brycheinion.ruleset \
		buelt.ruleset \
		cornwall.ruleset \
		danelaw.ruleset \
		devon.ruleset \
		dorset.ruleset \
		dyfed.ruleset \
		essex.ruleset \
		gwent.ruleset \
		gwynedd.ruleset \
		hampshire.ruleset \
		jorvik.ruleset \
		kent.ruleset \
		norfolk.ruleset \
		northmercia.ruleset \
		northumbria.ruleset \
		pirate.ruleset \
		powys.ruleset \
		suffolk.ruleset \
		surrey.ruleset \
		sussex.ruleset \
		westmercia.ruleset \
		wiltshire.ruleset 

EXTRA_DIST = $(pkgdata_DATA) Makefile.am.sh

