## Process this file with automake to produce Makefile.in
# Note: After adding a new nation file, 'make Makefile.am'

## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/@PACKAGE@/feudalciv/nation

pkgdata_DATA = \
		barbarian.ruleset \
		berkshire.ruleset \
		brycheiniog.ruleset \
		buelt.ruleset \
		danelaw.ruleset \
		devon.ruleset \
		dorset.ruleset \
		dyfed.ruleset \
		essex.ruleset \
		glywysing.ruleset \
		gwent.ruleset \
		gwynedd.ruleset \
		hampshire.ruleset \
		hwicce.ruleset \
		jorvik.ruleset \
		kent.ruleset \
		mercia.ruleset \
		middleanglia.ruleset \
		norfolk.ruleset \
		northumbria.ruleset \
		pirate.ruleset \
		powys.ruleset \
		seisyllwg.ruleset \
		somerset.ruleset \
		suffolk.ruleset \
		surrey.ruleset \
		sussex.ruleset \
		westwales.ruleset \
		westmercia.ruleset \
		wiltshire.ruleset

EXTRA_DIST = $(pkgdata_DATA) Makefile.am.sh

