## Process this file with automake to produce Makefile.in
# Note: After adding a new nation file, 'make Makefile.am'

## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/@PACKAGE@/feudalciv/nation

pkgdata_DATA = \
		barbarian.ruleset \
		berkshire.ruleset \
		brycheiniog.ruleset \
		buelt.ruleset \
		cumbria.ruleset \
		danishanglia.ruleset \
		danishmercia.ruleset \
		devon.ruleset \
		dorset.ruleset \
		dyfed.ruleset \
		essex.ruleset \
		glywysing.ruleset \
		gwent.ruleset \
		gwynedd.ruleset \
		hampshire.ruleset \
		hwicce.ruleset \
		jorvik.ruleset \
		kent.ruleset \
		magonsaete.ruleset \
		middleanglia.ruleset \
		norfolk.ruleset \
		northmercia.ruleset \
		northumbria.ruleset \
		pirate.ruleset \
		powys.ruleset \
		seisyllwg.ruleset \
		somerset.ruleset \
		southmercia.ruleset \
		suffolk.ruleset \
		surrey.ruleset \
		sussex.ruleset \
		westwales.ruleset \
		wiltshire.ruleset \
		wreocensaete.ruleset 

EXTRA_DIST = $(pkgdata_DATA) Makefile.am.sh

